chore (authorBooks): cleanup
- logs
- optimization --> dont return empty List.of() rather Collections.emptyList()